# src/server/docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginDto"
+                            "$ref": "#/definitions/auth.LoginDto"
                         }
                     }
                 ],
@@ -32,7 +32,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.TokenDto"
+                            "$ref": "#/definitions/auth.TokenDto"
                         }
                     }
                 }
@@ -40,20 +40,17 @@
         },
         "/auth/logout": {
             "post": {
-                "description": "Generates a new access token using a valid refresh token",
+                "description": "Logs out current user session",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "auth"
                 ],
-                "summary": "Refresh Access Token",
+                "summary": "User Logout",
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.TokenDto"
-                        }
+                        "description": "OK"
                     }
                 }
             }
@@ -72,7 +69,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.TokenDto"
+                            "$ref": "#/definitions/auth.TokenDto"
                         }
                     }
                 }
@@ -82,7 +79,7 @@
             "get": {
                 "description": "return information about the server build, version, etc ...",
                 "produces": [
-                    "image/png"
+                    "application/json"
                 ],
                 "tags": [
                     "info"
@@ -92,7 +89,7 @@
                     "200": {
                         "description": "Information about server",
                         "schema": {
-                            "type": "struct"
+                            "$ref": "#/definitions/info.ServerInfoDto"
                         }
                     }
                 }
@@ -114,7 +111,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.NewUserDto"
+                            "$ref": "#/definitions/user.NewUserDto"
                         }
                     }
                 ],
@@ -122,7 +119,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserDto"
+                            "$ref": "#/definitions/user.UserDto"
                         }
                     },
                     "400": {
@@ -139,21 +136,21 @@
         },
         "/user/all-users": {
             "get": {
-                "description": "Fetches all users for superadmin",
+                "description": "Fetches all users for admin",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "user"
                 ],
-                "summary": "Get all users for superadmin",
+                "summary": "Get all users for admin",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.UserDto"
+                                "$ref": "#/definitions/user.UserDto"
                             }
                         }
                     },
@@ -183,7 +180,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserDto"
+                            "$ref": "#/definitions/user.UserDto"
                         }
                     },
                     "400": {
@@ -191,44 +188,6 @@
                     },
                     "401": {
                         "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/user/oib/{oib}": {
-            "get": {
-                "description": "get a user with oib",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "get user with oib",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "user oib",
-                        "name": "oib",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.UserDto"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
                     },
                     "404": {
                         "description": "Not Found"
@@ -264,7 +223,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.UserDto"
+                                "$ref": "#/definitions/user.UserDto"
                             }
                         }
                     },
@@ -300,7 +259,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserDto"
+                            "$ref": "#/definitions/user.UserDto"
                         }
                     },
                     "400": {
@@ -336,7 +295,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UserDto"
+                            "$ref": "#/definitions/user.UserDto"
                         }
                     }
                 ],
@@ -344,7 +303,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserDto"
+                            "$ref": "#/definitions/user.UserDto"
                         }
                     },
                     "400": {
@@ -391,89 +350,66 @@
                     }
                 }
             }
-        },
-        "/ws/lobby/{userId}/{clientId}": {
-            "get": {
-                "description": "Web socket for lobby providing data for players",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "lobby"
-                ],
-                "summary": "web socket for lobby",
-                "responses": {
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
         }
     },
     "definitions": {
-        "dto.LoginDto": {
+        "auth.LoginDto": {
             "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "minLength": 6
+                    "type": "string"
                 }
             }
         },
-        "dto.NewUserDto": {
+        "auth.TokenDto": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "info.ServerInfoDto": {
+            "type": "object",
+            "properties": {
+                "build": {
+                    "type": "string"
+                },
+                "buildTimestamp": {
+                    "type": "string"
+                },
+                "commitHash": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.NewUserDto": {
             "type": "object",
             "required": [
-                "birthDate",
                 "email",
-                "firstName",
-                "lastName",
-                "oib",
                 "password",
-                "residence",
                 "role",
                 "username"
             ],
             "properties": {
-                "birthDate": {
-                    "type": "string"
-                },
                 "email": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string",
-                    "maxLength": 100,
-                    "minLength": 2
-                },
-                "lastName": {
-                    "type": "string",
-                    "maxLength": 100,
-                    "minLength": 2
-                },
-                "oib": {
                     "type": "string"
                 },
                 "password": {
                     "type": "string",
                     "minLength": 6
-                },
-                "residence": {
-                    "type": "string",
-                    "maxLength": 255
                 },
                 "role": {
                     "type": "string",
                     "enum": [
                         "admin",
-                        "user",
-                        "superadmin"
+                        "user"
                     ]
                 },
                 "username": {
@@ -486,39 +422,19 @@
                 }
             }
         },
-        "dto.TokenDto": {
+        "user.UserDto": {
             "type": "object",
             "properties": {
-                "accessToken": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.UserDto": {
-            "type": "object",
-            "properties": {
-                "birthDate": {
-                    "type": "string"
-                },
                 "email": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "oib": {
                     "type": "string"
                 },
                 "policeToken": {
                     "type": "string"
                 },
-                "residence": {
+                "role": {
                     "type": "string"
                 },
-                "role": {
+                "username": {
                     "type": "string"
                 },
                 "uuid": {
