# src/server/user/model.go
@@ -13,20 +13,17 @@ import (
 type UserRole string
 
 const (
-	ROLE_USER        UserRole = "user"
-	ROLE_ADMIN       UserRole = "admin"
-	ROLE_SUPER_ADMIN UserRole = "superadmin"
+	ROLE_USER  UserRole = "user"
+	ROLE_ADMIN UserRole = "admin"
 )
 
 func StrToUserRole(text string) (UserRole, error) {
 	role := UserRole(text)
 	switch role {
-	case ROLE_ADMIN:
+	case ROLE_ADMIN, "superadmin":
 		return ROLE_ADMIN, nil
 	case ROLE_USER:
 		return ROLE_USER, nil
-	case ROLE_SUPER_ADMIN:
-		return ROLE_SUPER_ADMIN, nil
 
 	default:
 		return "", cerror.ErrUnknownRole
@@ -34,9 +31,8 @@ func StrToUserRole(text string) (UserRole, error) {
 }
 
 var _VALID_USER_ROLES = map[UserRole]bool{
-	ROLE_USER:        true,
-	ROLE_SUPER_ADMIN: true,
-	ROLE_ADMIN:       true,
+	ROLE_USER:  true,
+	ROLE_ADMIN: true,
 }
 
 type Session struct {
@@ -48,11 +44,6 @@ type User struct {
 	ID           bson.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
 	Uuid         uuid.UUID     `json:"uuid" bson:"uuid"`
 	Username     string        `json:"username" bson:"username"`
-	FirstName    string        `json:"firstName" bson:"first_name"`
-	LastName     string        `json:"lastName" bson:"last_name"`
-	OIB          string        `json:"oib" bson:"oib"`
-	Residence    string        `json:"residence" bson:"residence"`
-	BirthDate    time.Time     `json:"birthDate" bson:"birth_date"`
 	Email        string        `json:"email" bson:"email"`
 	PasswordHash string        `json:"passwordHash" bson:"password_hash"`
 	Role         UserRole      `json:"role" bson:"role"`
@@ -68,11 +59,7 @@ func (u *User) ValidateRole() error {
 }
 
 func (u *User) Update(user *User) *User {
-	u.BirthDate = user.BirthDate
-	u.FirstName = user.FirstName
-	u.LastName = user.LastName
-	u.OIB = user.OIB
-	u.Residence = user.Residence
+	u.Username = user.Username
 	u.Email = user.Email
 	u.Role = user.Role
 	u.UpdatedAt = time.Now()
